fix(css): align thumbnails on the left side
Looks a lot better than having them aligned in the center.

--- a/scss/ui/_cards.scss
+++ b/scss/ui/_cards.scss
@@ -116,6 +116,8 @@
                 transition-delay: 0.4s;
             }
         }
+
+        img { object-position: left top }
     }
 
     &-body,
